--- a/index.html
+++ b/index.html
@@ -23,33 +23,34 @@
             </nav>
         </header>
     <main>
-        <!--
-        <table width="100%">
-                <tr>
-                    <td>
-                        <h2> Video from youtube using iFrame</h2>
-                        <iframe width="560" height="315" src="" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>  </iframe>  
-                    </td>
-
-                    <td>
-                        <h2> Locally stored video</h2>
-                        <video width="560" height="315" controls>
-                           <source src="video/var.mp4" type="video/mp4">
-                        </video>
-                    </td>
-                 </tr>
-            </table>-->
+        <aside>
+            <ol>
+                <h2> Different Breeds available</h2>
+    
+                <li> Breed 1</li>
+                <li> Breed 2</li>
+                <li> Breed 3</li>
+                <li> Breed 4</li>
+                <li> Breed 5</li>
+                <li> Breed 6</li>
+                <li> Breed 7</li>
+                <li> Breed 8</li>
+                <li> Breed 9</li>
+                <li> Breed 10</li>
+                <li> Breed 11</li>
+            </ol>
+            </aside>
         <section id="">
          <h3> H3 placeholder</h3>
-         <img src="" alt="" />
+         <img src="images/cat_1.jpg" alt="cat 1" />
         </section>
         <section id="">
          <h3> H3 placeholder </h3>
-         <video src="" alt="" >
+         <video src="video/cat_video.mp4" alt="cat video" >
 
          </video>
         </section>
-        <article class="">
+        <article class="col_class">
         <h4> 
            H4 Placeholder
         </h4>
@@ -71,23 +72,6 @@
         <p> </p>
 
         </article>
-        <aside>
-        <ol>
-            <h2> Different Breeds available</h2>
-
-            <li> Breed 1</li>
-            <li> Breed 2</li>
-            <li> Breed 3</li>
-            <li> Breed 4</li>
-            <li> Breed 5</li>
-            <li> Breed 6</li>
-            <li> Breed 7</li>
-            <li> Breed 8</li>
-            <li> Breed 9</li>
-            <li> Breed 10</li>
-            <li> Breed 11</li>
-        </ol>
-        </aside>
     </main>
 
     </body>
