--- a/page2.html
+++ b/page2.html
@@ -7,7 +7,7 @@
         <meta name="description" content="Holiday Information">
         <meta name="keywords" content="Holiday,Contact,Forms">
         <title>Project homepage </title>
-        <link rel="stylesheet" href="styleSheet.css">
+        <link rel="stylesheet" href="Style/styleSheet.css">
     </head>
      
     <body>
